<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lbl_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_header"
            android:textSize="25dp"
            android:textColor="@color/black" />
        <TextView
            android:gravity="center"
            android:id="@+id/lbl_rnd_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:text="@string/str_developer"
            android:layout_below="@id/lbl_header"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/lbl_clg_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_rnd_by"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:text="@string/str_college"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:layout_below="@+id/lbl_clg_name"
            android:text="@string/str_dev_class"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</RelativeLayout>