<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_det_crop"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/cassava"/>
            <TextView
                android:id="@+id/txt_det_disease_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_det_crop"
                android:textSize="22dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/str_predicted"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txt_det_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_det_disease_name"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/str_disease_info"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txt_det_measures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_det_info"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/str_cbb_cure"
                android:gravity="center"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>